# agent-toolkit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  gemini-extension.json  glama.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.github/workflows/: main.yml  release.yml
modelcontextprotocol/: README.md  package.json  pnpm-lock.yaml  smithery.yaml
modelcontextprotocol/scripts/: publish
modelcontextprotocol/src/: index.ts
providers/: README.md
providers/claude/plugin/: .mcp.json
providers/codex/plugin/: .mcp.json
providers/kiro/: get-started-kiro.md
tools/: README.md
tools/modelcontextprotocol/: CHANGELOG.md  README.md  build-dxt.js  manifest.json  package.json  pnpm-lock.yaml  server.json
tools/modelcontextprotocol/src/: cli.ts  (+2 more)
tools/python/: CHANGELOG.md  MIGRATION.md  Makefile  README.md  pyproject.toml  requirements.txt
tools/python/maton_agent_toolkit/: __init__.py  configuration.py
tools/python/maton_agent_toolkit/crewai/: __init__.py  toolkit.py
tools/python/maton_agent_toolkit/langchain/: __init__.py  toolkit.py
tools/python/maton_agent_toolkit/openai/: __init__.py  toolkit.py
tools/python/maton_agent_toolkit/shared/: __init__.py  async_initializer.py  constants.py  mcp_client.py  schema_utils.py  toolkit_core.py
tools/python/maton_agent_toolkit/strands/: __init__.py  toolkit.py
tools/python/tests/: test_async_initializer.py  test_configuration.py  test_mcp_client.py  test_schema_utils.py  test_version.py
tools/typescript/: CHANGELOG.md  MIGRATION.md  README.md  jest.config.ts  package.json  pnpm-lock.yaml
typescript/: README.md  package.json  pnpm-lock.yaml
typescript/scripts/: publish
(+85 files in other folders)
