[project]
name = "maton-agent-toolkit"
version = "0.1.0"
description = "Maton Agent Toolkit"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Maton", email = "support@maton.ai"}
]
keywords = ["maton", "api", "automation", "mcp", "agents"]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0", "agents>=0.0.84"]
langchain = ["langchain>=0.1.0"]
crewai = ["crewai>=0.1.0"]
strands = ["strands-agents>=1.0.0"]
all = [
    "maton-agent-toolkit[openai]",
    "maton-agent-toolkit[langchain]",
    "maton-agent-toolkit[crewai]",
    "maton-agent-toolkit[strands]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/maton-ai/maton-agent-toolkit/issues"
"Source Code" = "https://github.com/maton-ai/maton-agent-toolkit"
"Documentation" = "https://maton.ai"

[tool.setuptools.packages.find]
include = ["maton_agent_toolkit*"]
exclude = ["tests*", "examples*"]

[tool.ruff]
# same as our black config
line-length = 79
extend-exclude = ["build"]

[tool.ruff.format]
# currently the default value, but opt-out in the future
docstring-code-format = false

[tool.pyright]
include = [
  "*",
]
exclude = ["build", "**/__pycache__"]
reportMissingTypeArgument = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportPrivateImportUsage = true
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
